tests/errors/float-backend.ari
fn main() -> i64 {
  let value = 1.0f128 + 2.0f128;
  return 0;
}
